fix: JS disabilita eventi scrolling se il menu è aperto, JS fix dipendenza jQuery targeting iOS, CSS button menu mobile larghezza corretta senza spacing dinamico (css var), CSS correzioni footer

--- a/src/assets/css/components/footer.css
+++ b/src/assets/css/components/footer.css
@@ -33,6 +33,9 @@
             @apply mt-3.75;
             li{
                 @apply border-t border-grey-500 md:border-t-0 flex items-center;
+                &:last-child{
+                    @apply border-b md:border-b-0;
+                }
                 &::before{
                     content: '';
                     @screen md{
