--- a/src/assets/css/components/header.css
+++ b/src/assets/css/components/header.css
@@ -46,6 +46,11 @@
             @apply xl:w-3/4 flex justify-between items-center;
             nav{
                 @apply hidden xl:block;
+                ul{
+                    li{
+                        @apply select-none;
+                    }
+                }
                 > ul{
                     @apply flex items-center;
                     > li{
