--- a/src/assets/css/components/mobilemenu.css
+++ b/src/assets/css/components/mobilemenu.css
@@ -31,8 +31,8 @@
                 .menu-mobile-accordion-container{
                     @apply flex;
                     a{
-                        min-height: calc(var(--spacing-size)*5);
-                        width: calc(100% - var(--spacing-size) * 5);
+                        min-height: 3.125rem;
+                        width: calc(100% - 3.125rem);
                         @apply 
                             block 
                             pt-3.5 pb-2.5 
@@ -41,9 +41,9 @@
                         ;
                     }
                     button{
-                        @apply shrink-0 flex items-start w-xxl border-b border-grey-200;
+                        @apply shrink-0 flex items-start w-12.5 border-b border-grey-200;
                         svg{
-                            @apply pointer-events-none;
+                            @apply w-full pointer-events-none;
                         }
                     }
                 }
@@ -90,7 +90,7 @@
                             &:first-child:last-child{
                                 &::after{
                                     content: '';
-                                    @apply absolute bottom-0 right-0 block w-xxl border-b border-grey-200;
+                                    @apply absolute bottom-0 right-0 block w-12.5 border-b border-grey-200;
                                 }
                             }
                         }
@@ -148,7 +148,7 @@
                                 &:first-child:last-child{
                                     &::after{
                                         content: '';
-                                        @apply absolute bottom-0 right-0 block w-xxl border-b border-grey-200;
+                                        @apply absolute bottom-0 right-0 block w-12.5 border-b border-grey-200;
                                     }
                                 }
                             }
@@ -159,6 +159,6 @@
         }
     }
     &__secondary{
-        @apply pt-sm pb-base bg-black text-white;
+        @apply pt-2.5 pb-5 bg-black text-white;
     }
 }
